--- a/resources/lang/en_EN.xml
+++ b/resources/lang/en_EN.xml
@@ -32,6 +32,9 @@
     <translation key="disabled">Disabled</translation>
     <translation key="duration">Key press duration</translation>
     <translation key="key_recognition_error">Key recognition error</translation>
+
+    <translation key="speed_control">Speed</translation>
+    <translation key="current_speed">Current speed</translation>
     
     <!-- Play error messages -->
     <translation key="play_error_message">Error playing the music</translation>
