--- a/resources/lang/de_DE.xml
+++ b/resources/lang/de_DE.xml
@@ -1,51 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <translations>
-    <!-- Allgemeine Fehler und Erfolgsmeldungen -->
-    <translation key="error_loading_translations">Fehler beim Laden der Übersetzungen: {0}</translation>
-    <translation key="lang_config_not_found">Fehler Lang Config nicht gefunden</translation>
-    <translation key="language_not_found">Sprache konnte nicht gefunden werden</translation>
-    <translation key="file_not_found">Datei nicht gefunden</translation>
-    <translation key="unknown_file_format">Unbekanntes Dateiformat</translation>
-    <translation key="error_loading_languages">Fehler beim Laden der verfügbaren Sprachen</translation>
-    <translation key="error_title">Fehler</translation>
-    <translation key="language_saved">Sprache wurde gespeichert</translation>
-    <translation key="missing_translations_file">Fehlende Übersetzungsdatei für {0}</translation>
-    
-    <!-- GUI: Fenster und Buttons -->
-    <translation key="language_window_title">Sprachauswahl</translation>
-    <translation key="select_language">Sprache auswählen:</translation>
-    <translation key="save_button_text">Speichern</translation>
-    <translation key="info_title">Information</translation>
-    <translation key="no_song_selected">Kein Lied ausgewählt</translation>
+    <!-- ==================== -->
+    <!-- HAUPTANWENDUNGSTEXTE -->
+    <!-- ==================== -->
+    <translation key="project_title">Projekt Lyrica</translation>
     <translation key="file_select_title">Lied auswählen</translation>
-    <translation key="warning_title">Warnung</translation>
-    <translation key="choose_song_warning">Bitte wählen Sie ein Lied aus, bevor Sie fortfahren.</translation>
-    <translation key="select_valid_file">Bitte eine gültige Datei auswählen!</translation>
-    <translation key="file_dialog_title">Wählen Sie eine Datei</translation>
-    <translation key="select_button_text">Auswählen</translation>
+    <translation key="play_button_text">▶ Abspielen</translation>
     <translation key="supported_formats">Unterstützte Formate</translation>
 
-    <!-- Musikplayer Funktionen -->
-    <translation key="play_button_text">▶ Abspielen</translation>
+    <!-- ================= -->
+    <!-- WARNUNGEN & FEHLER -->
+    <!-- ================= -->
+    <translation key="warning_title">Warnung</translation>
+    <translation key="error_title">Fehler</translation>
+    <translation key="choose_song_warning">Bitte wählen Sie ein Lied aus</translation>
+    <translation key="play_error_message">Fehler beim Abspielen der Musik</translation>
+    <translation key="security_error_path">Unerlaubter Dateipfad</translation>
+    <translation key="invalid_file_format">Ungültiges Dateiformat. Unterstützt: .json, .txt, .skysheet</translation>
+    <translation key="sky_window_not_found">Sky-Fenster nicht gefunden</translation>
+    <translation key="window_focus_error">Fenster konnte nicht in den Fokus gesetzt werden</translation>
+    <translation key="browser_open_error">Browser konnte nicht geöffnet werden</translation>
+    <translation key="sky_not_running">Sky muss laufen!</translation>
+    <translation key="missing_song_notes">Song-Daten fehlen (songNotes)</translation>
+
+    <!-- ================= -->
+    <!-- MUSIKPLAYER-FUNKTIONEN -->
+    <!-- ================= -->
     <translation key="key_press">Tastendruck</translation>
     <translation key="enabled">Aktiviert</translation>
     <translation key="disabled">Deaktiviert</translation>
     <translation key="duration">Dauer des Tastendrucks</translation>
-    <translation key="key_recognition_error">Fehler bei der Tastenerkennung</translation>
-
     <translation key="speed_control">Geschwindigkeit</translation>
-    <translation key="current_speed">aktuelle Geschwindigkeit</translation>
-    
-    <!-- Fehlermeldungen beim Abspielen -->
-    <translation key="play_error_message">Fehler beim Abspielen der Musik</translation>
-    <translation key="missing_key_songNotes">Song-Daten fehlen (Key: songNotes)</translation>
-    <translation key="file_encoding_error">Die Datei {dateipfad} konnte nicht gelesen werden, da das Encoding unbekannt oder nicht unterstützt ist.</translation>
-    
-    <!-- Fensterfunktionen -->
-    <translation key="sky_window_not_found">Sky-Fenster nicht gefunden</translation>
-    <translation key="window_focus_error">Fenster konnte nicht in den Fokus gesetzt werden</translation>
-    
-    <!-- Weitere Textoptionen -->
+    <translation key="current_speed">Aktuelle Geschwindigkeit</translation>
     <translation key="preset">Preset</translation>
-    <translation key="project_title">Projekt Lyrica</translation>  
+    
+    <!-- ================= -->
+    <!-- SPRACH- UND LAYOUT -->
+    <!-- ================= -->
+    <translation key="language_window_title">Sprachauswahl</translation>
+    <translation key="select_language">Sprache auswählen:</translation>
+    <translation key="language_saved">Sprache wurde gespeichert</translation>
+    <translation key="save_button_text">Speichern</translation>
+    
+    <!-- ================= -->
+    <!-- VERSIONSINFORMATION -->
+    <!-- ================= -->
+    <translation key="update_available_text">Update verfügbar! v {}</translation>
+    <translation key="current_version_text">v {}</translation>
+    <translation key="update_error_text">Prüfung fehlgeschlagen</translation>
+    <translation key="no_connection_text">Keine Verbindung zum Server</translation>
+
 </translations>
