Validate and handle invalid playback speed
Added checks to prevent setting playback speed to zero or negative values in ProjectLyrica.py, displaying an error message and resetting to default if necessary. Updated language files to include a new 'invalid_speed' translation key for user feedback in all supported languages. Bumped version to 2.3.2.

--- a/resources/lang/ar_AR.xml
+++ b/resources/lang/ar_AR.xml
@@ -22,6 +22,7 @@
     <translation key="browser_open_error">تعذر فتح المتصفح</translation>
     <translation key="sky_not_running">يجب أن يكون سكاي قيد التشغيل!</translation>
     <translation key="missing_song_notes">بيانات الأغنية مفقودة (songNotes)</translation>
+    <translation key="invalid_speed">سرعة غير صالحة! يجب أن تكون أكبر من 0.</translation>
 
     <!-- ================= -->
     <!-- وظائف مشغل الموسيقى -->
