--- a/resources/lang/da_DK.xml
+++ b/resources/lang/da_DK.xml
@@ -22,6 +22,7 @@
     <translation key="browser_open_error">Kunne ikke åbne browser</translation>
     <translation key="sky_not_running">Sky skal køre!</translation>
     <translation key="missing_song_notes">Sangdata mangler (songNotes)</translation>
+    <translation key="invalid_speed">Ugyldig hastighed! Skal være større end 0.</translation>
 
     <!-- ================= -->
     <!-- MUSIKAFSPILLERFUNKTIONER -->
