--- a/resources/lang/id_ID.xml
+++ b/resources/lang/id_ID.xml
@@ -22,6 +22,7 @@
     <translation key="browser_open_error">Browser tidak dapat dibuka</translation>
     <translation key="sky_not_running">Sky harus berjalan!</translation>
     <translation key="missing_song_notes">Data lagu hilang (songNotes)</translation>
+    <translation key="invalid_speed">Kecepatan tidak valid! Harus lebih besar dari 0.</translation>
 
     <!-- ================= -->
     <!-- FUNGSI PEMUTAR MUSIK -->
