--- a/resources/lang/pt_PT.xml
+++ b/resources/lang/pt_PT.xml
@@ -22,6 +22,7 @@
     <translation key="browser_open_error">Não foi possível abrir o navegador</translation>
     <translation key="sky_not_running">Sky deve estar em execução!</translation>
     <translation key="missing_song_notes">Dados da música ausentes (songNotes)</translation>
+    <translation key="invalid_speed">Velocidade inválida! Deve ser maior que 0.</translation>
 
     <!-- ================= -->
     <!-- FUNÇÕES DO REPRODUTOR DE MÚSICA -->
