--- a/resources/lang/fr_FR.xml
+++ b/resources/lang/fr_FR.xml
@@ -22,6 +22,7 @@
     <translation key="browser_open_error">Impossible d'ouvrir le navigateur</translation>
     <translation key="sky_not_running">Sky doit être en cours d'exécution !</translation>
     <translation key="missing_song_notes">Données de chanson manquantes (songNotes)</translation>
+    <translation key="invalid_speed">Vitesse invalide ! Doit être supérieure à 0.</translation>
 
     <!-- ================= -->
     <!-- FONCTIONS DU LECTEUR DE MUSIQUE -->
