--- a/resources/lang/zh_ZH.xml
+++ b/resources/lang/zh_ZH.xml
@@ -22,6 +22,7 @@
     <translation key="browser_open_error">无法打开浏览器</translation>
     <translation key="sky_not_running">Sky 必须正在运行！</translation>
     <translation key="missing_song_notes">缺少歌曲数据 (songNotes)</translation>
+    <translation key="invalid_speed">无效的速度！必须大于0。</translation>
 
     <!-- ================= -->
     <!-- 音乐播放器功能 -->
