Add smooth start (ramping) toggle to UI and config
Introduces an 'Enable Smooth Start' (ramping) option to the MusicPlayer, allowing users to toggle ramping behavior via the UI and settings. Updates default window sizes, adds the new translation key to all language files, and bumps the version to 2.3.4.

--- a/resources/lang/de_DE.xml
+++ b/resources/lang/de_DE.xml
@@ -42,6 +42,7 @@
     <translation key="select_language">Sprache auswählen:</translation>
     <translation key="language_saved">Sprache wurde gespeichert</translation>
     <translation key="save_button_text">Speichern</translation>
+    <translation key="enable_smooth_start">Sanfter Start</translation>
     
     <!-- ================= -->
     <!-- VERSIONSINFORMATION -->
