--- a/resources/lang/es_ES.xml
+++ b/resources/lang/es_ES.xml
@@ -42,6 +42,7 @@
     <translation key="select_language">Seleccionar idioma:</translation>
     <translation key="language_saved">Idioma guardado</translation>
     <translation key="save_button_text">Guardar</translation>
+    <translation key="enable_smooth_start">Inicio suave</translation>
     
     <!-- ================= -->
     <!-- INFORMACIÓN DE VERSIÓN -->
