--- a/resources/lang/pt_PT.xml
+++ b/resources/lang/pt_PT.xml
@@ -42,6 +42,7 @@
     <translation key="select_language">Selecione o idioma:</translation>
     <translation key="language_saved">Idioma salvo com sucesso</translation>
     <translation key="save_button_text">Salvar</translation>
+    <translation key="enable_smooth_start">Início suave</translation>
     
     <!-- ================= -->
     <!-- INFORMAÇÃO DA VERSÃO -->
