--- a/resources/lang/ar_AR.xml
+++ b/resources/lang/ar_AR.xml
@@ -42,6 +42,7 @@
     <translation key="select_language">اختار اللغة:</translation>
     <translation key="language_saved">تم حفظ اللغة</translation>
     <translation key="save_button_text">حفظ</translation>
+    <translation key="enable_smooth_start">بداية سلسة</translation>
     
     <!-- ================= -->
     <!-- معلومات الإصدار -->
