--- a/resources/lang/da_DK.xml
+++ b/resources/lang/da_DK.xml
@@ -42,6 +42,7 @@
     <translation key="select_language">Vælg sprog:</translation>
     <translation key="language_saved">Sprog er gemt</translation>
     <translation key="save_button_text">Gem</translation>
+    <translation key="enable_smooth_start">Blød start</translation>
     
     <!-- ================= -->
     <!-- VERSIONOPLYSNINGER -->
