--- a/resources/lang/en_EN.xml
+++ b/resources/lang/en_EN.xml
@@ -42,6 +42,7 @@
     <translation key="select_language">Select language:</translation>
     <translation key="language_saved">Language has been saved</translation>
     <translation key="save_button_text">Save</translation>
+    <translation key="enable_smooth_start">Smooth Start</translation>
     
     <!-- ================= -->
     <!-- VERSION INFORMATION -->
