--- a/resources/lang/ja_JA.xml
+++ b/resources/lang/ja_JA.xml
@@ -42,6 +42,7 @@
     <translation key="select_language">言語を選択：</translation>
     <translation key="language_saved">言語が保存されました</translation>
     <translation key="save_button_text">保存</translation>
+    <translation key="enable_smooth_start">スムーズスタート</translation>
     
     <!-- ================= -->
     <!-- バージョン情報 -->
