--- a/resources/lang/mg_MG.xml
+++ b/resources/lang/mg_MG.xml
@@ -42,6 +42,7 @@
     <translation key="select_language">Misafidiana fiteny:</translation>
     <translation key="language_saved">Voavonjy ny fiteny</translation>
     <translation key="save_button_text">Tehirizo</translation>
+    <translation key="enable_smooth_start">Fanombohana malefaka</translation>
     
     <!-- ================= -->
     <!-- FAMPANDRAISANA NY VERSIONS -->
