--- a/resources/lang/pl_PL.xml
+++ b/resources/lang/pl_PL.xml
@@ -42,6 +42,7 @@
     <translation key="select_language">Wybierz język:</translation>
     <translation key="language_saved">Język zapisany pomyślnie</translation>
     <translation key="save_button_text">Zapisz</translation>
+    <translation key="enable_smooth_start">Płynny start</translation>
     
     <!-- ================= -->
     <!-- INFORMACJE O WERSJI -->
