--- a/resources/lang/ru_RU.xml
+++ b/resources/lang/ru_RU.xml
@@ -42,6 +42,7 @@
     <translation key="select_language">Выберите язык:</translation>
     <translation key="language_saved">Язык был сохранен</translation>
     <translation key="save_button_text">Сохранить</translation>
+    <translation key="enable_smooth_start">Плавный старт</translation>
     
     <!-- ================= -->
     <!-- ИНФОРМАЦИЯ О ВЕРСИИ -->
