Add ramping info display and update smooth start UI
Introduces a new ramping info display for users when smooth start is disabled, with a configurable display count and updated window sizing logic. Refactors the smooth start toggle to a button, adds new translation keys for 'smooth_start' and 'smooth_start_info' in all supported languages, and updates error logging for playback. Bumps version to 2.3.5.

--- a/resources/lang/ar_AR.xml
+++ b/resources/lang/ar_AR.xml
@@ -42,7 +42,8 @@
     <translation key="select_language">اختار اللغة:</translation>
     <translation key="language_saved">تم حفظ اللغة</translation>
     <translation key="save_button_text">حفظ</translation>
-    <translation key="enable_smooth_start">بداية سلسة</translation>
+    <translation key="smooth_start">بداية تدريجية</translation>
+    <translation key="smooth_start_info">تسارع تدريجي</translation>
     
     <!-- ================= -->
     <!-- معلومات الإصدار -->
