--- a/resources/lang/nl_NL.xml
+++ b/resources/lang/nl_NL.xml
@@ -42,7 +42,8 @@
     <translation key="select_language">Kies taal:</translation>
     <translation key="language_saved">Taal is opgeslagen</translation>
     <translation key="save_button_text">Opslaan</translation>
-    <translation key="enable_smooth_start">Zachte start</translation>
+    <translation key="smooth_start">Zachte start</translation>
+    <translation key="smooth_start_info">Geleidelijke versnelling</translation>
     
     <!-- ================= -->
     <!-- VERSIE-INFORMATIE -->
