--- a/resources/lang/en_US.xml
+++ b/resources/lang/en_US.xml
@@ -42,7 +42,8 @@
     <translation key="select_language">Select Language:</translation>
     <translation key="language_saved">Language saved</translation>
     <translation key="save_button_text">Save</translation>
-    <translation key="enable_smooth_start">Smooth Start</translation>
+    <translation key="smooth_start">Smooth Start</translation>
+    <translation key="smooth_start_info">Note acceleration</translation>
     
     <!-- ================= -->
     <!-- VERSION INFORMATION -->
