--- a/resources/lang/fr_FR.xml
+++ b/resources/lang/fr_FR.xml
@@ -42,7 +42,8 @@
     <translation key="select_language">Sélectionner la langue :</translation>
     <translation key="language_saved">Langue enregistrée</translation>
     <translation key="save_button_text">Enregistrer</translation>
-    <translation key="enable_smooth_start">Démarrage en douceur</translation>
+    <translation key="smooth_start">Démarrage doux</translation>
+    <translation key="smooth_start_info">Accélération progressive</translation>
     
     <!-- ================= -->
     <!-- INFORMATION SUR LA VERSION -->
