--- a/resources/lang/id_ID.xml
+++ b/resources/lang/id_ID.xml
@@ -42,7 +42,8 @@
     <translation key="select_language">Pilih bahasa:</translation>
     <translation key="language_saved">Bahasa telah disimpan</translation>
     <translation key="save_button_text">Simpan</translation>
-    <translation key="enable_smooth_start">Mulai halus</translation>
+    <translation key="smooth_start">Mulai Bertahap</translation>
+    <translation key="smooth_start_info">Akselerasi bertahap</translation>
     
     <!-- ================= -->
     <!-- INFORMASI VERSI -->
