--- a/resources/lang/mg_MG.xml
+++ b/resources/lang/mg_MG.xml
@@ -42,7 +42,8 @@
     <translation key="select_language">Misafidiana fiteny:</translation>
     <translation key="language_saved">Voavonjy ny fiteny</translation>
     <translation key="save_button_text">Tehirizo</translation>
-    <translation key="enable_smooth_start">Fanombohana malefaka</translation>
+    <translation key="smooth_start">Fanombohana moramora</translation>
+    <translation key="smooth_start_info">Hafainganana moramora</translation>
     
     <!-- ================= -->
     <!-- FAMPANDRAISANA NY VERSIONS -->
